test/statements/conditionals/param/nonparam-and-false.good
nonparam-and-false.chpl:9: In function 'CyclicArr_dsiAccess':
nonparam-and-false.chpl:10: warning: in doRADOpt
nonparam-and-false.chpl:16: error: success
